--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
     "babel-eslint": "^10.1.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "husky": "^4.2.3",
-    "lint-staged": "^10.1.2"
+    "lint-staged": "^10.1.2",
+    "mongoose": "^5.9.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
