--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node -r dotenv/config -r esm ./src/bin/www",
+    "start:dev": "cross-env NODE_ENV=development node -r dotenv/config -r esm ./src/bin/www",
     "start": "node -r dotenv/config -r esm ./src/bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
