--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node -r dotenv/config -r esm ./src/bin/www",
+    "dev": "cross-env NODE_ENV=development nodemon -r dotenv/config -r esm ./src/bin/www",
     "start": "node -r dotenv/config -r esm ./src/bin/www"
   },
   "dependencies": {
