--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "pusher": "^3.0.1"
   },
   "devDependencies": {
+    "express-fileupload": "^1.1.7-alpha.3",
     "nodemon": "^2.0.3"
   }
 }
