--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,6 +6,7 @@
 # testing
 /coverage
 
+.env
 # production
 /build
 
@@ -16,7 +17,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
