--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node -r dotenv/config -r esm ./src/bin/www"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
@@ -19,6 +20,7 @@
     "mongoose": "^5.9.7",
     "morgan": "~1.9.1",
     "morgan-body": "^2.4.8",
+    "nodemailer": "^6.4.6",
     "pusher": "^3.0.1"
   },
   "devDependencies": {
