feature(Login Notification): Update login notification - add Sendgrid API_KEY for production

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ PUSHER_API_ID=983769
 PUSHER_KEY=b611797cddd5621b4320
 PUSHER_SECRET=c5e3b6201d984723d348
 PUSHER_CLUSTER=eu
+SENDGRID_API_KEY=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
