--- a/backend/package.json
+++ b/backend/package.json
@@ -26,5 +26,8 @@
   "devDependencies": {
     "express-fileupload": "^1.1.7-alpha.3",
     "nodemon": "^2.0.3"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
