--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "ischolar",
     "version": "0.1.0",
     "scripts": {
-      "postinstall": "npm install --prefix backend && npm install --prefix education-app"
+      "postinstall": "npm install --prefix backend && npm install --prefix education-app",
+      "start" : "node -r dotenv/config -r esm ./backend/src/bin/www"
     }
   }
