--- a/package.json
+++ b/package.json
@@ -2,6 +2,28 @@
   "name": "ischolar",
   "version": "0.1.0",
   "scripts": {
-    "postinstall": "npm install --prefix backend && npm install --prefix education-app"
+    "postinstall": "npm install --prefix backend && npm install --prefix education-app",
+    "start": "node -r dotenv/config -r esm ./backend/src/bin/www"
+  },
+  "dependencies": {
+    "@sendgrid/mail": "^7.0.1",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
+    "express": "~4.16.1",
+    "http-errors": "^1.6.3",
+    "jade": "~1.11.0",
+    "mongoose": "^5.9.7",
+    "morgan": "~1.9.1",
+    "morgan-body": "^2.4.8",
+    "nodemailer": "^6.4.6",
+    "pusher": "^3.0.1"
+  },
+  "devDependencies": {
+    "express-fileupload": "^1.1.7-alpha.3",
+    "nodemon": "^2.0.3"
   }
 }
