--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "morgan": "~1.9.1",
     "morgan-body": "^2.4.8",
     "nodemailer": "^6.4.6",
-    "pusher": "^3.0.1"
+    "pusher": "^3.0.1",
+    "express-fileupload": "^1.1.7-alpha.3"
   },
   "devDependencies": {
-    "express-fileupload": "^1.1.7-alpha.3",
     "nodemon": "^2.0.3"
   }
 }
