--- a/education-app/public/manifest.json
+++ b/education-app/public/manifest.json
@@ -3,9 +3,9 @@
 	"name": "iScholars",
 	"icons": [
 		{
-			"src": "https://res.cloudinary.com/duzpmyphv/image/upload/v1588242787/politico/logo.png",
-			"sizes": "192x192",
-			"type": "image/png"
+			"src": "favicon.ico",
+			"sizes": "64x64 32x32 24x24 16x16",
+			"type": "image/x-icon"
 		},
 		{
 			"src": "logo192.png",
