--- a/education-app/package.json
+++ b/education-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "moment": "^2.24.0",
+    "netlify-cli": "^2.50.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-multi-select-component": "^2.0.4",
